# agent-platforms

./: .gitignore  main.py  pyproject.toml
autogen_demo/src/: autogen_simple_agent.py  autogen_transfer_agent.py  test_userproxy.py
crewai_demo/output/: report.md
crewai_demo/src/crewai_demo/: crew.py  crewai_transfer_agent.py  main.py  simple_flow.py  transfer_crew.py  transfer_main.py
crewai_demo/src/crewai_demo/config/: transfer_agents.yaml  transfer_tasks.yaml
crewai_demo/src/crewai_demo/tools/: transfer_tools.py
llamaindex_demo/: pyproject.toml
llamaindex_demo/src/: llamaindex_transfer_agent.py  simple_agent.py
longgraph_demo/src/: langgraph_transfer_agent.py  llm_transfer_agent.py  longgrapf_simple_agent.py  test_toolcall.py
metagpt_demo/config/: config2.yml
metagpt_demo/src/: metagp_simple_agent.py
pydantic_demo/src/: graph_test.py  pydantic_simple_agent.py  pydantic_transfer_agent.py
