[project]
name = "agent-platforms"
version = "0.1.0"
description = "尝试不同的agent框架"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.150.0",
    "langgraph>=0.2.0",
    "langchain[anthropic]>=0.2.0",
    "langchain-openai>=0.1.0",
    "autogen-agentchat>=0.7.1",
    "autogen-ext[openai]>=0.7.1",
    "llama-index>=0.13.0",
    "llama-index-llms-openai-like>=0.5.0",
    "llama-index-llms-ollama>=0.7.0",
    "llama-index-llms-dashscope>=0.5.0",
    "pydantic-ai[logfire]>=0.4.11",
    "pydantic>=2.11.7",
    "pydantic-graph>=0.4.11",
]

[project.scripts]
crewai_demo = "crewai_demo.main:run"
run_crew = "crewai_demo.main:run"
train = "crewai_demo.main:train"
replay = "crewai_demo.main:replay"
test = "crewai_demo.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crewai_demo/src/crewai_demo", "longgraph_demo"]

[tool.crewai]
type = "crew"

[tool.uv.workspace]
members = [
    "llamaindex_demo",
]
